[package]
name = "sisyphus"
version = "0.1.0"
edition = "2021"
authors = ["James Prestwich <james@prestwi.ch>"]
description = "Reusable utils for long-lived, worker-oriented rust programs"
license = "Apache-2.0 OR MIT"

[dependencies]
eyre = "0.6.8"
futures = "0.3.26"
prometheus = "0.13.3"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.93", features = ["raw_value"] }
thiserror = "1.0.38"
tokio = { version = "1.22.0", features = ["macros", "rt", "time", "sync"] }
tokio-stream = "0.1.11"
tokio-tungstenite = "0.18.0"
tracing = "0.1.37"
tungstenite = "0.18.0"
warp = "0.3.3"

[dev-dependencies]
tracing-test = "0.2.3"
